--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,8 +5,7 @@
 
 trigger: none
 
-pool:
-  vmImage: ubuntu-latest
+pool: NewAgent
 
 variables:
   bkstrgname : 'BRG1'
@@ -14,7 +13,7 @@ variables:
   bkcontainer : 'merranbo'
   #bkfile : '2_2_Values.tfvars'
 
-stages:
+stages: 
   - stage: Dev
     displayName: Deploy to Development
     variables:
@@ -126,7 +125,7 @@ stages:
                       command: 'apply'
                       commandOptions: '-var-file="$(varfile)"'
                       environmentServiceNameAzureRM: 'Azure subscription 1(3f48112c-a56d-44e0-9a80-1ed5fbce3aac)'
-                      
+        
   - stage: Prod
     displayName: Deploy to Production
     condition: succeeded ('Stage')
